@@ -33,9 +33,9 @@ import org.apache.commons.codec.language.Nysiis;
 import org.apache.commons.codec.language.RefinedSoundex;
 import org.apache.commons.codec.language.Soundex;
 import org.apache.lucene.analysis.TokenStream;
-import org.apache.lucene.analysis.util.ResourceLoader;
-import org.apache.lucene.analysis.util.ResourceLoaderAware;
-import org.apache.lucene.analysis.util.TokenFilterFactory;
+import org.apache.lucene.util.ResourceLoader;
+import org.apache.lucene.util.ResourceLoaderAware;
+import org.apache.lucene.analysis.TokenFilterFactory;
 
 /**
  * Factory for {@link PhoneticFilter}.
@@ -62,8 +62,15 @@ import org.apache.lucene.analysis.util.TokenFilterFactory;
  * &lt;/fieldType&gt;</pre>
  * 
  * @see PhoneticFilter
+ *
+ * @since 3.1
+ * @lucene.spi {@value #NAME}
  */
 public class PhoneticFilterFactory extends TokenFilterFactory implements ResourceLoaderAware {
+
+  /** SPI name */
+  public static final String NAME = "phonetic";
+
   /** parameter name: either a short name or a full class name */
   public static final String ENCODER = "encoder";
   /** parameter name: true if encoded tokens should be added as synonyms */
@@ -107,6 +114,11 @@ public class PhoneticFilterFactory extends TokenFilterFactory implements Resourc
     }
   }
 
+  /** Default ctor for compatibility with SPI */
+  public PhoneticFilterFactory() {
+    throw defaultCtorException();
+  }
+
   @Override
   public void inform(ResourceLoader loader) throws IOException {
     clazz = registry.get(name.toUpperCase(Locale.ROOT));
@@ -142,7 +154,7 @@ public class PhoneticFilterFactory extends TokenFilterFactory implements Resourc
     // Unfortunately, Commons-Codec doesn't offer any thread-safe guarantees so we must play it safe and instantiate
     // every time.  A simple benchmark showed this as negligible.
     try {
-      Encoder encoder = clazz.newInstance();
+      Encoder encoder = clazz.getConstructor().newInstance();
       // Try to set the maxCodeLength
       if(maxCodeLength != null && setMaxCodeLenMethod != null) {
         setMaxCodeLenMethod.invoke(encoder, maxCodeLength);
