@@ -29,7 +29,7 @@ import org.carrot2.text.linguistic.IStemmerFactory;
 import org.carrot2.util.ReflectionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.tartarus.snowball.SnowballProgram;
+import org.tartarus.snowball.SnowballStemmer;
 import org.tartarus.snowball.ext.DanishStemmer;
 import org.tartarus.snowball.ext.DutchStemmer;
 import org.tartarus.snowball.ext.EnglishStemmer;
@@ -54,7 +54,7 @@ import org.tartarus.snowball.ext.TurkishStemmer;
  * @lucene.experimental
  */
 public class LuceneCarrot2StemmerFactory implements IStemmerFactory {
-  private static final Logger logger = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   @Override
   public IStemmer getStemmer(LanguageCode language) {
@@ -83,7 +83,7 @@ public class LuceneCarrot2StemmerFactory implements IStemmerFactory {
      * This mapping is not dynamic because we want to keep the possibility to
      * obfuscate these classes.
      */
-    private static HashMap<LanguageCode, Class<? extends SnowballProgram>> snowballStemmerClasses;
+    private static HashMap<LanguageCode, Class<? extends SnowballStemmer>> snowballStemmerClasses;
     static {
       snowballStemmerClasses = new HashMap<>();
       snowballStemmerClasses.put(LanguageCode.DANISH, DanishStemmer.class);
@@ -110,9 +110,9 @@ public class LuceneCarrot2StemmerFactory implements IStemmerFactory {
      * An adapter converting Snowball programs into {@link IStemmer} interface.
      */
     private static class SnowballStemmerAdapter implements IStemmer {
-      private final SnowballProgram snowballStemmer;
+      private final SnowballStemmer snowballStemmer;
 
-      public SnowballStemmerAdapter(SnowballProgram snowballStemmer) {
+      public SnowballStemmerAdapter(SnowballStemmer snowballStemmer) {
         this.snowballStemmer = snowballStemmer;
       }
 
@@ -129,25 +129,25 @@ public class LuceneCarrot2StemmerFactory implements IStemmerFactory {
 
     /**
      * Create and return an {@link IStemmer} adapter for a
-     * {@link SnowballProgram} for a given language code. An identity stemmer is
+     * {@link SnowballStemmer} for a given language code. An identity stemmer is
      * returned for unknown languages.
      */
     public static IStemmer createStemmer(LanguageCode language) {
-      final Class<? extends SnowballProgram> stemmerClazz = snowballStemmerClasses
+      final Class<? extends SnowballStemmer> stemmerClazz = snowballStemmerClasses
           .get(language);
 
       if (stemmerClazz == null) {
-        logger.warn("No Snowball stemmer class for: " + language.name()
-            + ". Quality of clustering may be degraded.");
+        log.warn("No Snowball stemmer class for: {}. "
+            + "Quality of clustering may be degraded.", language.name());
         return IdentityStemmer.INSTANCE;
       }
 
       try {
-        return new SnowballStemmerAdapter(stemmerClazz.newInstance());
+        return new SnowballStemmerAdapter(stemmerClazz.getConstructor().newInstance());
       } catch (Exception e) {
-        logger.warn("Could not instantiate snowball stemmer"
-            + " for language: " + language.name()
-            + ". Quality of clustering may be degraded.", e);
+        log.warn("Could not instantiate snowball stemmer for language: {}"
+                + ". Quality of clustering may be degraded."
+            , language.name(), e);
 
         return IdentityStemmer.INSTANCE;
       }
@@ -166,7 +166,7 @@ public class LuceneCarrot2StemmerFactory implements IStemmerFactory {
         ReflectionUtils.classForName(ArabicStemmer.class.getName(), false);
         ReflectionUtils.classForName(ArabicNormalizer.class.getName(), false);
       } catch (ClassNotFoundException e) {
-        logger
+        log
             .warn(
                 "Could not instantiate Lucene stemmer for Arabic, clustering quality "
                     + "of Arabic content may be degraded. For best quality clusters, "
