@@ -16,14 +16,12 @@
  */
 package org.apache.solr.util;
 
-import java.util.TimeZone;
 import java.util.Set;
-import java.util.HashSet;
-import java.util.Collections;
-import java.util.Arrays;
-
-import java.util.regex.Pattern;
+import java.util.TimeZone;
 import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
+import org.apache.solr.common.SolrException;
 
 /**
  * Simple utilities for working with TimeZones
@@ -42,8 +40,7 @@ public final class TimeZoneUtils {
    * @see TimeZone#getAvailableIDs
    */
   public static final Set<String> KNOWN_TIMEZONE_IDS 
-    = Collections.unmodifiableSet(new HashSet<>
-                                  (Arrays.asList(TimeZone.getAvailableIDs())));
+    = Set.of(TimeZone.getAvailableIDs());
 
   /**
    * This method is provided as a replacement for TimeZone.getTimeZone but 
@@ -82,4 +79,20 @@ public final class TimeZoneUtils {
 
   private static Pattern CUSTOM_ID_REGEX = Pattern.compile("GMT(?:\\+|\\-)(\\d{1,2})(?::?(\\d{2}))?");
 
+  /**
+   * Parse the specified timezone ID. If null input then return UTC. If we can't resolve it then
+   * throw an exception.  Does not return null.
+   */
+  public static TimeZone parseTimezone(String tzStr) {
+    if (tzStr != null) {
+      TimeZone tz = getTimeZone(tzStr);
+      if (null == tz) {
+        throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
+            "Solr JVM does not support TZ: " + tzStr);
+      }
+      return tz;
+    } else {
+      return DateMathParser.UTC; //TODO move to TimeZoneUtils
+    }
+  }
 }
